<resources>
    <string name="app_name">Trivia</string>
    <string name="create_new_game">Create New Game</string>
    <string name="any_category">Any Category</string>
    <string name="category_9">General Knowledge</string>
    <string name="category_10">Entertainment: Books</string>
    <string name="category_11">Entertainment: Film</string>
    <string name="category_12">Entertainment: Music</string>
    <string name="category_13">Entertainment: Musicals &amp; Theatres</string>
    <string name="category_14">Entertainment: Television</string>
    <string name="category_15">Entertainment: Video Games</string>
    <string name="category_16">Entertainment: Board Games</string>
    <string name="category_17">Science &amp; Nature</string>
    <string name="category_18">Science: Computers</string>
    <string name="category_19">Science: Mathematics</string>
    <string name="category_20">Mythology</string>
    <string name="category_21">Sports</string>
    <string name="category_22">Geography</string>
    <string name="category_23">History</string>
    <string name="category_24">Politics</string>
    <string name="category_25">Art</string>
    <string name="category_26">Celebrities</string>
    <string name="category_27">Animals</string>
    <string name="category_28">Vehicles</string>
    <string name="category_29">Entertainment: Comics</string>
    <string name="category_30">Science: Gadgets</string>
    <string name="category_31">Entertainment: Japanese Anime &amp; Manga</string>
    <string name="category_32">Entertainment: Cartoon &amp; Animations</string>
    <string name="any_difficulty">Any Difficulty</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="any_type">Any Type</string>
    <string name="multiple_choice">Multiple Choice</string>
    <string name="true_false">True / False</string>
    <string name="number_of_questions">Number of Questions</string>
    <string name="select_category">Select Category</string>
    <string name="select_difficulty">Select Difficulty</string>
    <string name="select_type">Select Type</string>
    <string name="start_game">Start game</string>
    <string name="question_title">Question %s of %s</string>
    <string name="check_answer">Check answer</string>
    <string name="next_question">Next question</string>
    <string name="finish_game">Finish game</string>
    <string name="true_answer">True</string>
    <string name="false_answer">False</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="empty" />
    <string name="score">Score: %s</string>
    <string name="final_score">Final score: %s</string>
    <string name="game_over">Game Over</string>
    <string name="new_game">New game</string>
    <string name="questions_singular">1 question</string>
    <string name="questions_plural">%s questions</string>
</resources>